--- a/css/estilo_login.css
+++ b/css/estilo_login.css
@@ -4,13 +4,11 @@ h1{
     color: white;
 }
 body{
-    padding: 50px 50px;
-    background-image: url(../imagenes/fondo2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: linear-gradient(45deg, #BB1881,#F88B50);
+    font-family: sans-serif;
 }
 form{
-    background-color: rgb(32, 53, 168);
+    background-color: rgb(61, 65, 85);
     width: 450px;
     margin: auto;
     margin-top: 220px;
@@ -33,8 +31,8 @@ input{
     border-radius: 5px; 
     padding: 10px 20px;
     margin-left: 160px;
-    background-color: black;
-    color: white;
-    font-family: georgia black;
+    background-color: #BB1881,#F88B50;
+    color: black;
+    font-family: arial black;
     border-color: gray;
 }
